--- a/mtlemmon_project/JournalCreateView.xib
+++ b/mtlemmon_project/JournalCreateView.xib
@@ -284,6 +284,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">locationStatusView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="777673324"/>
+					</object>
+					<int key="connectionID">24</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="464313381"/>
 						<reference key="destination" ref="372490531"/>
@@ -395,7 +403,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">23</int>
+			<int key="maxID">24</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -405,6 +413,7 @@
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="dateLabel">UILabel</string>
 						<string key="locationLabel">UILabel</string>
+						<string key="locationStatusView">UIImageView</string>
 						<string key="okButton">UIButton</string>
 						<string key="theImageView">UIImageView</string>
 						<string key="theTextView">UITextView</string>
@@ -417,6 +426,10 @@
 						<object class="IBToOneOutletInfo" key="locationLabel">
 							<string key="name">locationLabel</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="locationStatusView">
+							<string key="name">locationStatusView</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="okButton">
 							<string key="name">okButton</string>
